--- a/week-2-lab.css
+++ b/week-2-lab.css
@@ -1,4 +1,4 @@
-  	
+		
 		
 		form{
 			border:3px solid blue;
@@ -10,12 +10,13 @@
 		#wrapper{
 			position:relative;
 			margin:auto;
-			width:960px;
-			height:800px;
+			width:600px;
+			height:500px;
 			padding:10px;
 		}
 		
 		.boxes{
+			border:2px solid gray;
 			border-radius:5px;
 		}
 		
@@ -31,4 +32,10 @@
 		.good{
 			border:3px solid green;
 			border-radius:5px;
+		}
+		
+		#conformation{
+			
+		
+		
 		}
